--- a/_posts/2021-06-27-库里.md
+++ b/_posts/2021-06-27-库里.md
@@ -8,16 +8,16 @@ tag: [篮球, 体育]
 ---
 
 北京时间6月22日，库里因要注意恢复身体也是考虑了好久拒绝了参加今年在东京举办的奥运会，根据美媒 nbcsports报道，勇士老板已经开始与库里进行过提前续约的一个事情，而球迷们也是希望库里能够终老勇士，完成一人一城的终生荣誉，不出意外的情况下，会在今年8 月份宣布具体的续约事宜，如果库里同意续约的话，也会收获NBA历史第一次超过两亿资金的合同。<br />
-![image.png](https://cdn.nlark.com/yuque/0/2021/png/12854861/1624795214343-35e35c40-28f8-4429-982c-a41d1555602a.png#clientId=u3a4d0f65-6a60-4&from=paste&id=u71025d14&margin=%5Bobject%20Object%5D&name=image.png&originHeight=366&originWidth=650&originalType=url&ratio=2&size=337495&status=done&style=none&taskId=u6b18db44-8c92-494d-9ef7-6af8a67917e)
+![image.png](https://img-blog.csdnimg.cn/img_convert/0b82a196e5e52ffb3760b01fa524b321.png#clientId=u3a4d0f65-6a60-4&from=paste&id=u71025d14&margin=[object Object]&name=image.png&originHeight=366&originWidth=650&originalType=url&ratio=2&size=337495&status=done&style=none&taskId=u6b18db44-8c92-494d-9ef7-6af8a67917e)
 
 库里的合同将在2021-22赛季时结束，届时将会成为不受限制的自由球员，但所有迹象都将表明库里今年会续约勇士，而2021-22赛季的交易市场也是近些年来巨星球员以及明星球员最多的一次分别都有 字母歌，伦纳德，库里，乔治，戈贝尔，维克多，奥拉迪波，霍乐迪，詹姆斯，保罗，格里芬等许多知名甚至超级巨星，而媒体也是列出了最适合留在各队的球员，其中勇士队的肯特-贝兹莫尔便是上榜了<br />
-![image.png](https://cdn.nlark.com/yuque/0/2021/png/12854861/1624795214220-367cbc97-fc6e-4503-a6fa-a03ae7ca9599.png#clientId=u3a4d0f65-6a60-4&from=paste&id=ua738b17f&margin=%5Bobject%20Object%5D&name=image.png&originHeight=280&originWidth=650&originalType=url&ratio=2&size=131622&status=done&style=none&taskId=u57f0501e-6202-42db-bdb5-c0f718876cc)
+![image.png](https://img-blog.csdnimg.cn/img_convert/ddf35b00f88a6b24b8b9e10542d0b365.png#clientId=u3a4d0f65-6a60-4&from=paste&id=ua738b17f&margin=[object Object]&name=image.png&originHeight=280&originWidth=650&originalType=url&ratio=2&size=131622&status=done&style=none&taskId=u57f0501e-6202-42db-bdb5-c0f718876cc)
 
 对于任何球队来说如果今年球队对于交易市场的球员处理得当，那么明年对于总冠军还是有很大竞争力的，而届时库里成为不受限制的自由球员时，勇士最先要做的是如何把库里留下来，毕竟库里对于勇士来说就是精神图腾的一样的存在，库里也是表示希望能够留在勇士终老.<br />还有，媒体建议勇士用乌布雷以及怀斯曼去交换76人的恩比德，而恩比德在赛后采访时也是被问到是否还愿意留在76人帮助球队，他却说道“这对我来说是一个很艰难的决定，我只能说我爱这里的所有人和球迷”这句话的意思已经是显而易见了，大帝作为76人的当家球星十分不满意队友在本轮系列赛的表现，尤其是对于西蒙斯作为一个控球后卫罚球命中率竟然与奥尼尔旗鼓相当，这也是大帝要离开球队的一个因素。<br />
-![image.png](https://cdn.nlark.com/yuque/0/2021/png/12854861/1624795215145-9934cc20-b94d-46ac-8309-b20c18fa69a7.png#clientId=u3a4d0f65-6a60-4&from=paste&id=u4b4c6b82&margin=%5Bobject%20Object%5D&name=image.png&originHeight=454&originWidth=650&originalType=url&ratio=2&size=648481&status=done&style=none&taskId=ub21d616b-c57b-492d-8f94-9973fa90db0)
+![image.png](https://img-blog.csdnimg.cn/img_convert/875b556e65398bdc1a7bc85dad21357d.png#clientId=u3a4d0f65-6a60-4&from=paste&id=u4b4c6b82&margin=[object Object]&name=image.png&originHeight=454&originWidth=650&originalType=url&ratio=2&size=648481&status=done&style=none&taskId=ub21d616b-c57b-492d-8f94-9973fa90db0)
 
 由此美媒建议勇士可以通过乌布雷和怀斯曼来换取大帝，如果交易成功下赛季的勇士依旧还是夺冠大热门，想一想当 库里+ 克莱+ 维金斯+ 格林+ 大帝的组合加在一起的时候会有多么恐怖，依旧还是那个宇宙无敌勇<br />
-![image.png](https://cdn.nlark.com/yuque/0/2021/png/12854861/1624795215282-da7e0858-0ac7-47c5-b6a2-e0be67693a24.png#clientId=u3a4d0f65-6a60-4&from=paste&id=ucbe56705&margin=%5Bobject%20Object%5D&name=image.png&originHeight=800&originWidth=640&originalType=url&ratio=2&size=790683&status=done&style=none&taskId=u39ff3514-878e-4101-8b77-a3b708b8baa)
+![image.png](https://img-blog.csdnimg.cn/img_convert/01b16b21964e54b17b565333f5a5fea6.png#clientId=u3a4d0f65-6a60-4&from=paste&id=ucbe56705&margin=[object Object]&name=image.png&originHeight=800&originWidth=640&originalType=url&ratio=2&size=790683&status=done&style=none&taskId=u39ff3514-878e-4101-8b77-a3b708b8baa)
 
 在北京时间6月19日消息，克莱-汤普森乘船出海并开了直播，期间汤普森谈到了自己伤势以及回归计划，同时也明确了球队新赛季的目标。<br />没有什么是能够比打篮球还要快乐的事情，我期待下赛季勇士在总决赛的表现，那里是世界媒体的瞩目点，也是我们回归的起点<br />汤普森在2019年6月总决赛期间遭遇膝盖十字韧带撕裂，从而错过了2019-20赛季的全部比赛。不幸的是，在2020年11月汤普森又遭遇了跟腱撕裂，这也导致他错过了2020-21赛季。正如从这位勇士球星的声音中听到的，他渴望回到球场上参加一场直播比赛。<br />并且汤普森也是谈论到自己的伤势，由于伤势可能不会参加上半段的赛季比赛，毕竟我希望自己能够以完全健康的状态复出去帮助球队这位31岁的球星，勇士队的球迷们迫不及待地想看到汤普森汤普森回归勇士之后的状态。<br />
-![image.png](https://cdn.nlark.com/yuque/0/2021/png/12854861/1624795215243-5d2208cb-fc9e-4287-bca5-f06e1eb1e0d1.png#clientId=u3a4d0f65-6a60-4&from=paste&id=u5846eda9&margin=%5Bobject%20Object%5D&name=image.png&originHeight=791&originWidth=650&originalType=url&ratio=2&size=745500&status=done&style=none&taskId=udf7425e7-5c4f-47fe-8aa8-5e89b23c9e2)
+![image.png](https://img-blog.csdnimg.cn/img_convert/f5f7ecdfa223f07d8490c852ed34f2d6.png#clientId=u3a4d0f65-6a60-4&from=paste&id=u5846eda9&margin=[object Object]&name=image.png&originHeight=791&originWidth=650&originalType=url&ratio=2&size=745500&status=done&style=none&taskId=udf7425e7-5c4f-47fe-8aa8-5e89b23c9e2)
