--- a/_posts/2021-06-20-中国正能量.md
+++ b/_posts/2021-06-20-中国正能量.md
@@ -7,4 +7,4 @@ description: You’ll find this post in your `_posts` directory. Go ahead and ed
 tag: [国家]
 ---
 
-中国正能量：“五个一百”评选活动启动，策马雪原”女副局长谈网络正能量<br />6月25日，由中央网信办主办的中国正能量2021“五个一百”网络精品征集评选展播活动在京启动。当天的启动仪式以微视频《中国正能量》开场，分“可爱中国”“青春中国”“可亲中国”“魅力中国”“奋进中国”五个篇章展开。<br />中国正能量2021“五个一百”网络精品征集评选展播活动，旨在发挥正能量激励人、鼓舞人、引领人的重要作用，网聚正能量，构建同心圆。<br />![](https://cdn.nlark.com/yuque/0/2021/jpeg/12854861/1624796321285-8accb9b1-4034-4c70-a209-abf718812286.jpeg#clientId=u499560cb-8c61-4&from=paste&id=zuB2e&margin=%5Bobject%20Object%5D&originHeight=400&originWidth=600&originalType=url&ratio=2&status=done&style=none&taskId=u738dfb76-f52b-4c3f-958f-047f73aa70d)<br />其中包括新疆伊犁州文旅局副局长贺娇龙、青年演员张译、短视频创作者李子柒等不同领域的网络内容创作者、传播者、参与者通过多种形式进行互动分享，传播正能量。<br />2020年，身着一袭红袍，策马雪原的贺娇龙在网络上走红，通过互联网宣传推广昭苏，引来网友点赞。据贺娇龙本人透露，对于此番前往伊犁州文旅局任职，确实与自己此前在抖音等互联网平台对于伊犁州、昭苏县文旅产业的推广有关。对一个公职人员而言，她希望能踏踏实实、默默无闻地在自己的岗位上做事情。<br />![](https://cdn.nlark.com/yuque/0/2021/jpeg/12854861/1624796321342-6cc748ec-58be-479d-8c32-cf725067d7b1.jpeg#clientId=u499560cb-8c61-4&from=paste&id=u2d3b2d1c&margin=%5Bobject%20Object%5D&originHeight=622&originWidth=829&originalType=url&ratio=2&status=done&style=none&taskId=uab150afa-74ad-4390-bdba-ed4e29d75ea)
+中国正能量：“五个一百”评选活动启动，策马雪原”女副局长谈网络正能量<br />6月25日，由中央网信办主办的中国正能量2021“五个一百”网络精品征集评选展播活动在京启动。当天的启动仪式以微视频《中国正能量》开场，分“可爱中国”“青春中国”“可亲中国”“魅力中国”“奋进中国”五个篇章展开。<br />中国正能量2021“五个一百”网络精品征集评选展播活动，旨在发挥正能量激励人、鼓舞人、引领人的重要作用，网聚正能量，构建同心圆。<br />![](https://img-blog.csdnimg.cn/img_convert/8b703266ae146e2069ff7077229b90fd.png#clientId=u499560cb-8c61-4&from=paste&id=zuB2e&margin=[object Object]&originHeight=400&originWidth=600&originalType=url&ratio=2&status=done&style=none&taskId=u738dfb76-f52b-4c3f-958f-047f73aa70d)<br />其中包括新疆伊犁州文旅局副局长贺娇龙、青年演员张译、短视频创作者李子柒等不同领域的网络内容创作者、传播者、参与者通过多种形式进行互动分享，传播正能量。<br />2020年，身着一袭红袍，策马雪原的贺娇龙在网络上走红，通过互联网宣传推广昭苏，引来网友点赞。据贺娇龙本人透露，对于此番前往伊犁州文旅局任职，确实与自己此前在抖音等互联网平台对于伊犁州、昭苏县文旅产业的推广有关。对一个公职人员而言，她希望能踏踏实实、默默无闻地在自己的岗位上做事情。<br />![](https://img-blog.csdnimg.cn/img_convert/9fd58d7fb01ca5867c9c7d1d399304b2.png#clientId=u499560cb-8c61-4&from=paste&id=u2d3b2d1c&margin=[object Object]&originHeight=622&originWidth=829&originalType=url&ratio=2&status=done&style=none&taskId=uab150afa-74ad-4390-bdba-ed4e29d75ea)
