--- a/_posts/2021-06-23-地球孪生兄弟.md
+++ b/_posts/2021-06-23-地球孪生兄弟.md
@@ -9,11 +9,11 @@ tag: [科普, 自然]
 
 真正的地球孪生兄弟，有水有大气，温度只有25度！
 自从人类开始探索外太空探索宇宙以来，就不断的寻找和我们人类一样存在于宇宙中的高等生命，但是比较可惜的在于近一个世纪的探寻，原来还是一无所获的，哪怕在某些星球上可能曾经出现过，我们诱惑着人类，猜测这颗星球上已经有了生命，但是只要人类没有真正的和外星文明交流上一切也还只是人类的臆想而已！<br />
-![](https://cdn.nlark.com/yuque/0/2021/jpeg/12854861/1624794695851-7279623b-02a6-4efb-840a-7fc13986ced9.jpeg#clientId=u8007245c-082a-4&from=paste&id=u2b3b184e&margin=%5Bobject%20Object%5D&originHeight=382&originWidth=600&originalType=url&ratio=2&status=done&style=none&taskId=uc92e7ca9-52bf-4d07-abae-d98ac4a1b4e)
+![](https://img-blog.csdnimg.cn/img_convert/042dcf486857b796a3fce011298fdf8f.png#clientId=u8007245c-082a-4&from=paste&id=u2b3b184e&margin=[object Object]&originHeight=382&originWidth=600&originalType=url&ratio=2&status=done&style=none&taskId=uc92e7ca9-52bf-4d07-abae-d98ac4a1b4e)
 当人类逐渐意识到目前的科技水平，还尚且无法支撑我们找到外星文明的时候，人类也就逐渐的脚踏实地的起来，比如我们的地球，实际上还存在着许多未解之谜，但人类连地球还没有了解，就是选择了解很远时空的外星生命了，再比如人类还没有飞出太阳系，还不知道太阳系之外的银河系内是否存在着外星生命，想着浩瀚的宇宙中到底有多少颗星球存在着生命!<br />
-![](https://cdn.nlark.com/yuque/0/2021/jpeg/12854861/1624794695855-91d97b8c-03fa-4f1e-927b-50610d029cd0.jpeg#clientId=u8007245c-082a-4&from=paste&id=u7edf7f49&margin=%5Bobject%20Object%5D&originHeight=386&originWidth=600&originalType=url&ratio=2&status=done&style=none&taskId=ue65f1900-fd29-4b98-8ab9-4a7d0de706d)
+![](https://img-blog.csdnimg.cn/img_convert/b9350ee75f3e3bfa53409a8b730e47a1.png#clientId=u8007245c-082a-4&from=paste&id=u7edf7f49&margin=[object Object]&originHeight=386&originWidth=600&originalType=url&ratio=2&status=done&style=none&taskId=ue65f1900-fd29-4b98-8ab9-4a7d0de706d)
 只是必要的筛选，还是不能少的，比如在36光年之外，就存在这一颗hd85512b行星，科学家甚至猜测，这颗星球上或许已经有了生命，只是奈何距离我们地球实在是太遥远了，都已经出了银河系，而以人类目前的速度来看，想要飞出银河系，至少还需要10万年的时间，而且还是以光速飞行的情况之下，但是俨然人类已经将这颗星球当成了我们地球的孪生兄弟，只因为这两颗星球实在是太相似了，首先它的云层的覆盖度很可能是不输给我们地球的，这也就意味着这颗星球上或许早就已经有了液态水，既然有水那么很大概率也会出现生命，而这是人类想要的吗？同时温度也不过25度，相当的舒适！<br />
-![](https://cdn.nlark.com/yuque/0/2021/jpeg/12854861/1624794729741-a0e373c1-1c23-4d89-a928-5554e5582ed2.jpeg#clientId=u8007245c-082a-4&from=paste&id=u97113f5c&margin=%5Bobject%20Object%5D&originHeight=366&originWidth=600&originalType=url&ratio=2&status=done&style=none&taskId=u17e6a5d9-b9cc-407f-8611-b840f452b4c)
+![](https://img-blog.csdnimg.cn/img_convert/a8846582e599d9be73bda6baa3dc9805.png#clientId=u8007245c-082a-4&from=paste&id=u97113f5c&margin=[object Object]&originHeight=366&originWidth=600&originalType=url&ratio=2&status=done&style=none&taskId=u17e6a5d9-b9cc-407f-8611-b840f452b4c)
 
 
 人类想要找到生命星球不假，但是私心还是希望这颗星球上的文明等级很低，这样人类不仅能和外星生命交流，还能占据它们的星球，而这颗hd85512b的生命比地球要漫长一点，若是也孕育出文明，很可能比人类文明高级，那么哪怕未来人类能够飞到hd85512b，并且实现移居，但是遭殃的说不定是我们人类自己，不过现在看来，人类的担忧还早，其实与其寻找生命星期移居，真不如好好保护我们的地球，你们说是不是的？
