文章图片位置改正

--- a/_posts/2021-11-07-EDG夺冠.markdown
+++ b/_posts/2021-11-07-EDG夺冠.markdown
@@ -27,7 +27,6 @@ tag: [中国队, LPL, 游戏]
 ![在这里插入图片描述](https://img-blog.csdnimg.cn/46783f9f24514b669d633f67bbe68bb4.png?x-oss-process=image/watermark,type_ZHJvaWRzYW5zZmFsbGJhY2s,shadow_50,text_Q1NETiBAcHVzaF9iYWNrKGJlc3Qgd2lzaCk=,size_19,color_FFFFFF,t_70,g_se,x_16)
 但是，即便EDG成为了六冠王，因为EDG在全球总决赛历史中一直表现不佳，仍是有不少人并不看好EDG在本届全球总决赛中的表现。但是，或许这就是EDG，越是不被看好，他们越是能够打出更好的表现。虽然在小组赛中，EDG以小组第二的成绩晋级八强，但是在八强赛中，EDG击败RNG，成功突破了八强的心魔；而在半决赛中，EDG淘汰GEN再次刷新了自己全球总决赛的最佳成绩。
 ![在这里插入图片描述](https://img-blog.csdnimg.cn/31844957a2d6421a954b2626a651c5c8.png?x-oss-process=image/watermark,type_ZHJvaWRzYW5zZmFsbGJhY2s,shadow_50,text_Q1NETiBAcHVzaF9iYWNrKGJlc3Qgd2lzaCk=,size_20,color_FFFFFF,t_70,g_se,x_16)
-或许![在这里插入图片描述](https://img-blog.csdnimg.cn/48173ac530ca4eed8806eb5d5722978f.png?x-oss-process=image/watermark,type_ZHJvaWRzYW5zZmFsbGJhY2s,shadow_50,text_Q1NETiBAcHVzaF9iYWNrKGJlc3Qgd2lzaCk=,size_12,color_FFFFFF,t_70,g_se,x_16)
-就像LPL官方解说米勒所说的那样，EDG都已经“破 ”了好几年了，是时候该“立”得更高了。最后，在与DK的决赛中，在被大多数人并不看好的情况下，EDG仍然坚持到了最后，更是击败了DK。而这样的表现，EDG也是真正打出了不破不立！
-
+或许就像LPL官方解说米勒所说的那样，EDG都已经“破 ”了好几年了，是时候该“立”得更高了。最后，在与DK的决赛中，在被大多数人并不看好的情况下，EDG仍然坚持到了最后，更是击败了DK。而这样的表现，EDG也是真正打出了不破不立！
+![在这里插入图片描述](https://img-blog.csdnimg.cn/48173ac530ca4eed8806eb5d5722978f.png?x-oss-process=image/watermark,type_ZHJvaWRzYW5zZmFsbGJhY2s,shadow_50,text_Q1NETiBAcHVzaF9iYWNrKGJlc3Qgd2lzaCk=,size_12,color_FFFFFF,t_70,g_se,x_16)
 最后，让我们再次恭喜EDG！
